# clawlegion

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  README_AR.md  README_CN.md  README_DE.md  README_ES.md  README_FR.md  README_JA.md  README_RU.md  README_TW.md  SECURITY.md  VERSION  clawlegion.toml
.github/: PULL_REQUEST_TEMPLATE.md  graph-fix.txt
.github/ISSUE_TEMPLATE/: custom.md
.github/scripts/: cache-cleanup.mjs
.github/workflows/: ci.yml  pages-pre.yml  release.yml
config/: org.toml
crates/agent/: Cargo.toml
crates/agent/src/: claude_code_runner.rs  codex_runner.rs  lib.rs  open_code_runner.rs  registry.rs  runtime.rs  types.rs
crates/agent/tests/: registry_tests.rs
crates/agent/tests/common/: mod.rs
crates/api/: Cargo.toml
crates/api/src/: lib.rs  server.rs  state.rs
crates/api/src/dto/: agent_dto.rs  message_api_dto.rs  message_dto.rs  mod.rs  org_dto.rs
crates/api/src/routes/: agents.rs  messages.rs  mod.rs  org.rs  system.rs
crates/api/src/services/: application_service.rs  message_service.rs  mod.rs
crates/api/tests/: message_service_tests.rs
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/capability/: Cargo.toml
crates/capability/src/: lib.rs  mcp.rs  tool.rs  tool_registry.rs  tree.rs
crates/capability/src/skill/: agent_binding.rs  binding.rs  claude_loader.rs  claude_runner.rs  config.rs  context.rs  dependency.rs  executor.rs  installer.rs  loader.rs  manager.rs  marketplace.rs  metadata.rs  mod.rs  registry.rs  trait_def.rs  types.rs
crates/capability/src/tools/: mod.rs  sandbox.rs
crates/core/: Cargo.toml
crates/core/src/: agent.rs  config.rs  error.rs  lib.rs  llm.rs  message.rs  plugin.rs  storage.rs
crates/core/tests/: agent_tests.rs  message_tests.rs  storage_tests.rs
crates/core/tests/common/: mod.rs
crates/llm/: Cargo.toml
crates/llm/src/: client.rs  lib.rs  registry.rs
crates/llm/tests/: llm_client_tests.rs
crates/llm/tests/common/: mod.rs
crates/org/: Cargo.toml
crates/org/src/: agent.rs  company.rs  config.rs  lib.rs  org_tree.rs
crates/org/tests/: config_tests.rs  org_tree_tests.rs
crates/org/tests/common/: mod.rs
crates/plugin/: Cargo.toml
crates/plugin/src/: bridge.rs  capability.rs  lib.rs  loader.rs  manager.rs  manifest.rs  protocol.rs  registry.rs  runtime.rs  signature.rs
crates/sdk/dynamic-plugin/: Cargo.toml
crates/sdk/dynamic-plugin/src/: lib.rs
crates/sdk/python/: README.md  pyproject.toml
crates/sdk/python/clawlegion/: __init__.py  agent.py  plugin.py  skill.py  tool.py  visibility.py
crates/sdk/python/tests/: test_version.py
crates/sentinel/: Cargo.toml
crates/sentinel/src/: lib.rs  manager.rs  trigger.rs  watcher.rs
crates/sentinel/src/builtin_triggers/: manager_assigned.rs  mod.rs  private_message.rs  task_assigned.rs
crates/sentinel/tests/: trigger_tests.rs
crates/sentinel/tests/common/: mod.rs
crates/storage/: Cargo.toml
crates/storage/src/: compressor.rs  lib.rs  memory.rs  protocol.rs  storage.rs
docs/: architecture.md  release.md
packaging/homebrew/: clawlegion.rb.tmpl
plugins/anthropic-provider/: Cargo.toml  plugin.toml
plugins/anthropic-provider/src/: lib.rs
plugins/config-agent/: plugin.toml
plugins/config-routing/: plugin.toml
plugins/config-trigger/: plugin.toml
plugins/openai-provider/: Cargo.toml  plugin.toml
plugins/openai-provider/src/: lib.rs
plugins/python-echo/: plugin.toml  plugin_main.py
plugins/reddit-fetcher/: Cargo.toml  plugin.toml
plugins/reddit-fetcher/src/: lib.rs
plugins/remote-echo/: plugin.toml
plugins/remote-observer/: plugin.toml
plugins/sqlite-storage/: Cargo.toml  README.md  plugin.toml  protocol_storage_demo.py
plugins/sqlite-storage/src/: config.rs  lib.rs  schema.rs  storage.rs
scripts/: build-plugins.sh  build_pages_repos.sh  render_flatpak_manifest.py  render_homebrew_formula.py  version_sync.py
tests/: integration_tests.rs
tests/common/: mod.rs
web/: index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  vite.config.js  vite.config.ts
web/public/: CNAME
web/src/: App.tsx  i18n.tsx  main.tsx  query-client.ts  styles.css
web/src/components/: app-shell.tsx  backend-endpoint-dialog.tsx  backend-endpoint-provider.tsx  section-card.tsx  stat-card.tsx  status-pill.tsx
web/src/hooks/: use-api.ts
web/src/lib/: api.ts  runtime-api-base.test.ts  runtime-api-base.ts  utils.ts
web/src/pages/: agents.tsx  dashboard.test.tsx  dashboard.tsx  messages.tsx  org.tsx  system.tsx
web/src/pages/components/: agent-detail-panel.tsx
web/src/types/: api.ts
web/tests/e2e/: smoke.spec.ts
