[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/plugin",
    "crates/agent",
    "crates/org",
    "crates/storage",
    "crates/capability",
    "crates/sentinel",
    "crates/llm",
    "crates/app",
    "crates/api",
    "crates/sdk/dynamic-plugin",
    # Note: Dynamic plugins are built separately via `make plugins`
    # See scripts/build-plugins.sh for details
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"
authors = ["ClawLegion Team"]
license = "MIT"
repository = "https://github.com/clawlegion/clawlegion"
keywords = ["agent", "multi-agent", "plugin", "automation"]
categories = ["development-tools"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-test = "0.4"
tokio-util = "0.7"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Plugin loading
libloading = "0.8"

# Python integration
pyo3 = { version = "0.20", features = ["auto-initialize"] }

# HTTP/WebSocket
reqwest = { version = "0.11", features = ["json", "stream"] }
tungstenite = "0.21"
tokio-tungstenite = "0.21"
axum = "0.7"

# Utils
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.5"
parking_lot = "0.12"
once_cell = "1.19"
dirs = "5.0"
futures-core = "0.3"
futures-executor = "0.3"
futures-util = "0.3"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Cryptography for plugin signing
ring = "0.17"
base64 = "0.21"

# Internal crates
clawlegion-core = { path = "crates/core" }
clawlegion-plugin = { path = "crates/plugin" }
clawlegion-agent = { path = "crates/agent" }
clawlegion-org = { path = "crates/org" }
clawlegion-storage = { path = "crates/storage" }
clawlegion-capability = { path = "crates/capability" }
clawlegion-sentinel = { path = "crates/sentinel" }
clawlegion-llm = { path = "crates/llm" }
