[package]
name = "clawlegion-plugin"
description = "Plugin registry and lifecycle management for ClawLegion"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Core crate
clawlegion-core.workspace = true
clawlegion-llm.workspace = true
clawlegion-capability.workspace = true
clawlegion-agent.workspace = true
clawlegion-sentinel.workspace = true
clawlegion-storage.workspace = true

# Async runtime
tokio.workspace = true
async-trait.workspace = true
reqwest.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true

# Plugin loading
libloading.workspace = true

# Utils
dashmap.workspace = true
parking_lot.workspace = true
uuid.workspace = true
dirs = "5.0"

# Cryptography for plugin signing
ring.workspace = true
base64.workspace = true
futures-executor = "0.3"
chrono.workspace = true
futures-core.workspace = true
futures-util.workspace = true
tokio-util.workspace = true
semver = "1.0"
