[package]
name = "clawlegion-sentinel"
description = "Sentinel watchdog and agent wakeup system for ClawLegion"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Core crate
clawlegion-core.workspace = true

# Async runtime
tokio = { workspace = true, features = ["sync"] }
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true

# Utils
uuid.workspace = true
chrono.workspace = true
dashmap.workspace = true
parking_lot.workspace = true

# HTTP/WebSocket for remote triggers
reqwest.workspace = true
tungstenite.workspace = true

# Futures utilities
futures-util.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
