[package]
name = "openai-provider-plugin"
description = "OpenAI-compatible LLM provider plugin for ClawLegion"
version = "0.1.0"
edition = "2021"

# This plugin is built independently from the main workspace
[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
# ClawLegion SDK
clawlegion-plugin-sdk = { path = "../../crates/sdk/dynamic-plugin" }
clawlegion-core = { path = "../../crates/core" }

# Async runtime
async-trait = "0.1"
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Streams
futures-core = "0.3"
