[package]
name = "sqlite-storage-plugin"
description = "SQLite-based persistent storage plugin for ClawLegion"
version = "0.1.0"
edition = "2021"

# This plugin is built independently from the main workspace
[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
# ClawLegion SDK
clawlegion-plugin-sdk = { path = "../../crates/sdk/dynamic-plugin" }
clawlegion-core = { path = "../../crates/core" }
clawlegion-storage = { path = "../../crates/storage" }

# Async runtime
async-trait = "0.1"
tokio = { version = "1.35", features = ["full", "rt-multi-thread", "sync", "macros"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# SQLite - use rusqlite with bundled feature, no r2d2_sqlite to avoid version conflicts
rusqlite = { version = "0.31", features = ["bundled", "chrono", "serde_json"] }

# Connection pooling
parking_lot = "0.12"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"

# Utils
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Test dependencies
[dev-dependencies]
tempfile = "3.0"
