[package]
name = "clawlegion-plugin-sdk"
description = "SDK for developing dynamic plugins for ClawLegion"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Core crates
clawlegion-core.workspace = true
clawlegion-plugin.workspace = true
clawlegion-agent.workspace = true
clawlegion-capability.workspace = true

# Async runtime
tokio.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true

# Utils
uuid.workspace = true

[lib]
crate-type = ["lib"]
